# parsebot-kharkiv

./: Dockerfile  LICENSE  README.md  config.py  create_bot.py  main.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yml
handlers/: __init__.py  main.py  parser.py
src/: __main__.py  config.py  main.py
src/handlers/: __init__.py  dictionaries.py  keyboard.py  main.py  parser.py
src/utilities/: __init__.py
