[tool.poetry]
name = "parsebot"
version = "1.1"
description = "Bot for parsing olx posts and sending that to telegram"
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.7.0"
apykuma = "^1.2.0"
requests = "^2.32.3"
translate = "^3.6.1"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
dumb-init = "~1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
