[tool.poetry]
name = "parsebot"
version = "1.1"
description = "Bot for parsing olx posts and sending that to telegram"
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.8.0"
apykuma = "^1.2.0"
requests = "^2.32.3"
translate = "^3.6.1"
beautifulsoup4 = "^4.12.3"
black = {extras = ["d"], version = "^24.4.2"}
dbt-core = "^1.8.3"

[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
dumb-init = "~1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
